# MindMosaic

./: README.md
backend/: Cargo.toml  README.md  test_api.sh
backend/src/: main.rs
ml/: requirements.txt
ml/app/: api.py  pipeline.py
