[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
mongodb = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bson = "2.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
futures-util = "0.3.31"
